# server/app.ts
@@ -2,7 +2,8 @@ import express from 'express';
 
 import dotenv from 'dotenv'
 import sequelize from './dataAccess/dataAccess'
-import { Users } from './models/users';
+import { User } from './models/users';
+import { Business } from "./models/business";
 import setupSwagger from './swaggerConfig';
 import usersController from './controllers/usersController';
 dotenv.config()
@@ -18,7 +19,7 @@ setupSwagger(app);
 app.use('/users', usersController);
 
 sequelize.authenticate().then(async () => {
-    await Users.sync();
+    await User.sync();
     // const newUser = await Users.create({
     //     id: 9,
     //     userName: "aa",
@@ -26,6 +27,22 @@ sequelize.authenticate().then(async () => {
     //     userToken: "ddd"
     // });
 });
+
+sequelize.authenticate().then(async () => {
+    await Business.sync();
+    // const newUser = await Users.create({
+    //     id: 9,
+    //     userName: "aa",
+    //     userPassword: "12345",
+    //     userToken: "ddd"
+    // });
+});
+async function syncDatabase() {
+    await sequelize.sync({ force: false }); // force: false כדי לא לאבד נתונים קיימים
+    console.log('Database synced');
+}
+
+syncDatabase();
 
 app.listen(port, async () => {
     console.log(`Server is running at http://localhost:${port}/docs`);
