# server/controllers/usersController.ts
@@ -1,34 +1,36 @@
-import {getAll} from '../services/users.service'
-import { Request, Response } from 'express';
 import { User } from "../models/users";
-
+import { Request, Response } from 'express';
 
 import express from 'express';
+import { addUser, login } from "../services/users.service";
+import { CustomError } from "../errors/CustomError";
 const router = express.Router();
-//const  {getAll} = require( '../services/users.service')
-router.get('/', getAll);
-router.get('/:id', async (req: Request, res: Response) => {
+
+router.post('/signUp', async (req: Request, res: Response) => {
     try {
-        const users = await User.findOne({
-            where: {
-                id: req.params.id
-            },
-            raw: true
-        })
-
-        if (!users) {
-            return res.status(404).json({ message: 'User not found' });
+        const result = await addUser(req.body);
+        res.status(201).json(result);
+    } catch (err: any) {
+        if (err instanceof CustomError) {
+            res.status(err.statusCode).send(err.message);
+        } else {
+            res.status(500).send('Internal Server Error');
         }
-
-        res.status(200).json(users);
-    } catch (err) {
-
-        res.status(500).json({ message: 'Internal server error' });
-
         console.error('Error:', err);
     }
 });
-router.put('/:id',async (req: Request, res: Response) =>{
-
-}); 
+router.post('/login', async (req: Request, res: Response) => {
+    try {
+        const { loginEmail, loginPassword } = req.body;
+        const result = await login(loginEmail, loginPassword);
+        res.status(200).json(result);
+    } catch (err: any) {
+        if (err instanceof CustomError) {
+            res.status(err.statusCode).send(err.message);
+        } else {
+            res.status(500).send('Internal Server Error');
+        }
+        console.error('Error:', err);
+    }
+});
 export default router;
