# server/models/services.ts
@@ -1,4 +1,3 @@
-1
 import { Model, DataTypes } from 'sequelize';
 import sequelize from '../dataAccess/dataAccess';
 import { Business } from './business';
@@ -8,6 +7,8 @@ class Services extends Model {
     public serviceName!: string;
     public serviceDescription!: string;
     public serviceCost!: number;
+    public serviceDuration!: number;
+
 }
 
 Services.init({
@@ -27,6 +28,10 @@ Services.init({
     },
     serviceCost: {
         type: DataTypes.DOUBLE,
+        allowNull: false
+    },
+    serviceDuration: {
+        type: DataTypes.INTEGER,
         allowNull: false
     }
 },
